<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVTitleAddVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/addVehicle"
            android:textColor="#000000"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/ETEnterCarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterVehicle" />

        <EditText
            android:id="@+id/ETEnterPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPlate" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BTNCancelAdd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/BTNAddVehicleAdd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>
</LinearLayout>