<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="5sp"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    tools:context="com.example.dev.parking.Main2Activity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/LLChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVChooseVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:background="@color/button"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/choose"
                    android:textColor="@color/darkText"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:background="@color/plate"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TVGetVehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/darkText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TVGetPlate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/darkText"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/RLBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BTNSendSMS"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone1"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/BTNSendSMSZone2"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginStart="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone2"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/BTNSendSMSZone3"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginLeft="2sp"
                    android:layout_marginStart="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLBTNLineTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BTNSendSMSZone4"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone4"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/BTNSendSMSZone5"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginEnd="2sp"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginStart="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone5"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/BTNSendSMSZone6"
                    android:layout_width="0dp"
                    android:layout_height="150sp"
                    android:layout_marginLeft="2sp"
                    android:layout_marginStart="2sp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbutton"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/zone6"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/BTNdeleteVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/red"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/delete_vehicle"
                    android:textColor="#ffffff"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
